# retro-compositor

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: config.rs  error.rs  lib.rs  main.rs
src/audio/: analyzer.rs  loader.rs  mod.rs  types.rs
src/composition/: engine.rs  mod.rs
src/styles/: mod.rs  registry.rs  traits.rs
src/styles/boards/: effect.rs  mod.rs
src/styles/film/: effect.rs  mod.rs
src/styles/vhs/: effect.rs  mod.rs
src/styles/vintage/: effect.rs  mod.rs
src/video/: compositor_pure_rust.rs  loader_optimized.rs  loader_pure_rust.rs  mod.rs  processor.rs  types.rs
