[package]
name = "retro-compositor"
version = "0.1.0"
edition = "2021"
description = "Transform your music into retro-styled video compositions with AI-driven beat synchronization"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/retro-compositor"
keywords = ["audio", "video", "music", "retro", "effects"]
categories = ["multimedia::audio", "multimedia::video", "command-line-utilities"]

[features]
default = ["ffmpeg"]
ffmpeg = ["dep:ffmpeg-next"]

# Performance-optimized release profile
[profile.release]
# Enable all optimizations
opt-level = 3
# Enable link-time optimization for better performance across crates
lto = "fat"
# Optimize for speed over compile time
codegen-units = 1
# Enable debug info for profiling (remove if not needed)
debug = false
# Panic strategy for smaller binary and slight performance gain
panic = "abort"
# Enable CPU-specific optimizations
[profile.release.build-override]
opt-level = 3

# Fast development builds
[profile.dev]
opt-level = 1  # Some optimization for decent performance during development

# Performance testing profile
[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
debug = false

[[bin]]
name = "retro-compositor"
path = "src/main.rs"

[[bin]]
name = "minimal"
path = "src/bin/minimal.rs"

[[bin]]
name = "test_audio"
path = "src/bin/test_audio.rs"

[[bin]]
name = "test_video"
path = "src/bin/test_video.rs"

[dependencies]
# CLI and configuration
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"

# Audio processing (optimized features)
rodio = { version = "0.17", default-features = false, features = ["wav", "mp3", "flac"] }
rustfft = "6.2"
hound = "3.5"
symphonia = { version = "0.5", features = ["all"] }

# Mathematical operations
realfft = "3.3"

# Video/Image processing (optimized)
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
gif = { version = "0.12", optional = true }
png = "0.17"
# Optional FFmpeg support
ffmpeg-next = { version = "6.0", optional = true }

# Async and performance
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "process"] }
rayon = "1.8"
num_cpus = "1.16"

# Random number generation (optimized)
rand = { version = "0.8", features = ["small_rng"] }

# Logging and debugging
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Date/time handling
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

# Additional performance flags for specific targets
[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "target-cpu=native"]

[target.x86_64-apple-darwin]
rustflags = ["-C", "target-cpu=native"]

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-cpu=native"]