[package]
name = "retro-compositor"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
rodio = { version = "0.17", default-features = false, features = ["wav", "mp3", "flac"] }
rustfft = "6.2"
hound = "3.5"
symphonia = { version = "0.5", features = ["all"] }
realfft = "3.3"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
png = "0.17"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "process"] }
rayon = "1.8"
num_cpus = "1.16"
rand = { version = "0.8", features = ["small_rng"] }
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tempdir = "0.3.7"
tempfile = "3.20.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "retro-compositor"
path = "src/main.rs"
